@@ -6,7 +6,7 @@ copyright_year   = 2017
 version          = 0.29
 
 [@Author::Plicease]
-:version       = 2.36
+:version       = 2.44
 travis_status  = 1
 release_tests  = 1
 installer      = Author::Plicease::MakeMaker
